--- a/css/design.css
+++ b/css/design.css
@@ -47,8 +47,6 @@ button {
       color: #fff
     }
 
-.student-list{}
-
   .student-item{
     margin: 0 0 20px 0;
     padding: 0 0 20px 0;
@@ -121,3 +119,11 @@ button {
       background-color: #4ba6c3;
       color: #fff;
     }
+.no-results {
+  display: none;
+  text-align: center;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #c34b6a;
+}
